[package]
name = "cloudflare-r2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = {version ="1.5.0" , features = ["behavior-version-latest"]}
aws-sdk-s3 = { version="1.31.0", features = ["behavior-version-latest"] }
once_cell = "1.19.0"
log = "0.4.21"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
tokio-stream = "0.1.15"
mime_guess = "2.0.4"
anyhow = "1.0.86"

